--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "joi": "^18.0.1",
     "mongodb": "^6.19.0",
     "mongoose": "^8.8.4",
     "pino-http": "^10.3.0"
