--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "pino-pretty": "^13.1.1"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
