--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "handlebars": "^4.7.8",
+    "http-errors": "^2.0.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.8.4",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "pino-http": "^10.3.0"
   }
 }
