--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "scripts": {
     "lint": "eslint src/**/*.js",
     "start": "node ./src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": " npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "Kamila Goncharenko",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@redocly/cli": "^2.1.2",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
     "nodemon": "^3.1.0",
@@ -35,6 +39,8 @@
     "mongoose": "^8.8.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
